deployment/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: local-hero
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: keycloak-deployment
  template:
    metadata:
      labels:
        app: keycloak-deployment
    spec:
      containers:
        - name: keycloak
          image: dmitriynoa/custom-keycloak:0.0.1
          args: ["start-dev"]
          imagePullPolicy: "Always"
          volumeMounts:
            - mountPath: /opt/jboss/keycloak/themes/mobile
              name: themes
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
      volumes:
        - name: themes
          hostPath:
            path: /Projects/Noa/local-hero-api/src/keycloak/themes
