deployment/local-hero-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-hero-api
  namespace: local-hero
  labels:
    app: local-hero-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-hero-api
  template:
    metadata:
      labels:
        app: local-hero-api
    spec:
      containers:
        - name: local-hero-api
          image: dmitriynoa/test-api:0.0.7
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      serviceAccountName: default
