deployment/local-hero-api-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: local-hero-api-postgres
  namespace: local-hero
spec:
  serviceName: postgres-service
  selector:
    matchLabels:
      app: local-hero-api-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: local-hero-api-postgres
    spec:
      containers:
        - name: postgres
          image: postgis/postgis
---
apiVersion: v1
kind: Service
metadata:
  name: local-hero-api-postgres
  namespace: local-hero
  labels:
    app: local-hero-api-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: local-hero-api-postgres
