deployment/pgadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: local-hero
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: local-hero
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
